include_directories(../..)

function(TEST)
   test_base(${ARGV})
   set_target_properties(${ARGV0} PROPERTIES FOLDER rutil/Tests)
   target_link_libraries(${ARGV0} rutil)
endfunction()

test(testCoders testCoders.cxx)
test(testCompat testCompat.cxx)
test(testCountStream testCountStream.cxx)
test(testData testData.cxx)
test(testDataPerformance testDataPerformance.cxx)
test(testDataStream testDataStream.cxx)
test(testDnsUtil testDnsUtil.cxx)
test(testFifo testFifo.cxx)
test(testFileSystem testFileSystem.cxx)
test(testInserter testInserter.cxx)
test(testIntrusiveList testIntrusiveList.cxx)
test(testKeyValueStore testKeyValueStore.cxx)
test(testLogger TestSubsystemLogLevel.cxx testLogger.cxx)
test(testMD5Stream testMD5Stream.cxx)
test(testParseBuffer testParseBuffer.cxx)
test(testRandomHex testRandomHex.cxx)
test(testRandomThread testRandomThread.cxx)
test(testSHA1Stream testSHA1Stream.cxx)
test(testSharedPtr testSharedPtr.cxx)
test(testThreadIf testThreadIf.cxx)
test(testXMLCursor testXMLCursor.cxx)

if(WITH_SSL)
# TODO DigestStream.cxx doesn't seem to work on Windows... fix it or remove
# file if not used at all?
#   test(testDigestStream testDigestStream.cxx)
endif()

